Create new navbar links

--- a/landingPage/Sygo_landingPage/src/index.css
+++ b/landingPage/Sygo_landingPage/src/index.css
@@ -32,9 +32,9 @@
     #063906 0.89%,  /* dark green */
     #094909 17.23%, /* forest green */
     #1a6e1a 42.04%, /* lime green */
-    #6bb720 55.12%, /* chartreuse green */
-    #80bf22 71.54%, /* lighter chartreuse green */
-    #ebeb0c 100%    /* yellow */
+    #4c8216 55.12%, /* chartreuse green */
+    #6ca01c 71.54%, /* lighter chartreuse green */
+    #bebe0c 100%    /* yellow */
   );
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
